--- a/src/css/menu.css
+++ b/src/css/menu.css
@@ -124,7 +124,3 @@ a {
     font-size: 14px;
     font-weight: normal;
 }
-
-#update-box {
-    display: none;
-}
