--- a/src/css/update.css
+++ b/src/css/update.css
@@ -1,9 +1,5 @@
 /*! DDR Calc | https://github.com/Andrew67/ddr-calc */
 /* Update CSS */
-#update-box.show {
-    display: block;
-}
-
 #apply-update {
     color: var(--color-result);
     border: 1px solid var(--color-result);
@@ -14,4 +10,8 @@
     text-transform: uppercase;
     line-height: 34px;
     display: inline-block;
+}
+
+#apply-update:focus {
+    background: var(--color-result-focus);
 }
